# AlgorithmsThirdSemester

./: lr6_2022.ukr.docx
lab1/lab1/: BalancedMultiwayMergeSort.cpp  BalancedMultiwayMergeSort.h  ModifiedSort.cpp  ModifiedSort.h  Timer.h  lab1.cpp  tiny.txt
lab2/: ASTAR.txt  BFS.txt  Звіт Панченко Лаб2.odt  Новий Text Document.txt
lab2/lab2A/: input.txt  main.py  output.txt
lab2/lab2_8_puzzle_AStar/lab2_8_puzzle_AStar/: AStar.cpp  AStar.h  lab2_8_puzzle_AStar.cpp
lab2/lab2_8_puzzle_BFS/lab2_8_puzzle_BFS/: Node.cpp  Node.h  State.cpp  State.h  lab2_8_puzzle_BFS.cpp
lab3/: звіт.odt
lab3/lab3/lab3/x64/Debug/rcc/: qrc_qml.cpp
lab3/lab3Console/lab3Console/: TData.cpp  TData.h  lab3Console.cpp
lab3/labQt/labQt/: MainWindow.cpp  MainWindow.h  TData.cpp  TData.h  main.cpp
lab3/labQt/labQt/x64/Debug/moc/: moc_MainWindow.cpp
lab3/labQt/labQt/x64/Debug/rcc/: qrc_qml.cpp
lab3/labQt/labQt/x64/Debug/uic/: ui_MainWindow.h
lab4/: .~lock.звіт.odt#  CMakeLists.txt  res.txt  звіт.odt
lab4/AntsAlgorithm/AntsAlgorithm/: AntsAlgorithm.cpp  NNHelpFunctions.cpp  NNHelpFunctions.h  TAntAlgorithm.cpp  TAntAlgorithm.h  TAntAlgorithmTester.cpp  TAntAlgorithmTester.h
lab5/: .~lock.Report.odt#  .~lock.lr5_2022.ukr.docx#  CMakeLists.txt  Report.odt  TGeneticAlgorithm.cpp  TGeneticAlgorithm.h  TTester.cpp  TTester.h  TTimer.cpp  TTimer.h  lr5_2022.ukr.docx  main.cpp  pseudo.txt
lab5/results/PointCrossover<2> /s_uInputSize_100 s_uMaxWeight_500 s_uInitialPopulation_10 s_uStartTime_100 s_uEndTime_10000 s_uAddTime_100 /: 46.csv  47.csv  48.csv  49.csv  50.csv  51.csv  52.csv  53.csv  54.csv  55.csv
lab5/results/PointCrossover<2> PointCrossover<1> SequenceCrossover /s_uInputSize_100 s_uMaxWeight_500 s_uInitialPopulation_10 s_uStartTime_100 s_uEndTime_10000 s_uAddTime_100 /: 26.csv  27.csv  28.csv  29.csv  30.csv  31.csv  32.csv  33.csv  34.csv  35.csv  36.csv
lab5/results/PointCrossover<2> PointCrossover<1> SequenceCrossover BestPriceImprover /s_uInputSize_100 s_uMaxWeight_500 s_uInitialPopulation_10 s_uStartTime_100 s_uEndTime_10000 s_uAddTime_100 /: 0.csv  1.csv  2.csv  3.csv
lab5/results/PointCrossover<4> /s_uInputSize_100 s_uMaxWeight_500 s_uInitialPopulation_10 s_uStartTime_100 s_uEndTime_10000 s_uAddTime_100 /: 27.csv  28.csv  29.csv  30.csv  31.csv  32.csv
lab5/results/SequenceCrossover /s_uInputSize_100 s_uMaxWeight_500 s_uInitialPopulation_10 s_uStartTime_100 s_uEndTime_10000 s_uAddTime_100 /: .~lock.68.csv#  64.csv  65.csv  66.csv  67.csv  68.csv
lab5/results/onlyCrossovers/1/: text.txt
lab5/results/onlyCrossovers/2/: text.txt
lab6/: .~lock.Untitled 1.odg#  .~lock.Untitled 2.odg#  CMakeLists.txt  Untitled 1.odg  Untitled 2.odg  main.cpp
lab6/Assets/: cards.xcf
lab6/Assets/BoardScreen/: Untitled.xcf
lab6/Core/AI/: TAI.cpp  TAI.h
lab6/Core/Config/: TConfig.cpp  TConfig.h
lab6/Core/Controllers/: TInputHandler.cpp  TInputHandler.h
lab6/Core/LogErrors/: NNLogErrors.h
lab6/Core/Models/: NNCardGroup.h  NNCardValue.h  TBoardObject.cpp  TBoardObject.h  TCardObject.cpp  TCardObject.h  TPlayerObject.cpp  TPlayerObject.h
lab6/Core/Patterns/: TSingleton.h
lab6/Core/Settings/: NNGameSettigs.h  TSettings.cpp  TSettings.h
lab6/Core/TGameState/: TGameState.cpp  TGameState.h
lab6/GameSingletons/: TGameStateMachine.cpp  TGameStateMachine.h  TInputHandler.cpp  TLogic.cpp  TLogic.h
lab6/Logic/: TCard.cpp  TCard.h  TPlayer.cpp  TPlayer.h  TSession.cpp  TSession.h
lab6/Logic/AI/: TAI.cpp  TAI.h
lab6/Logic/Enums/: NNCardValue.h  NNDifficulty.h
lab6/Logic/Notify/: INotify.h  SAIEndTurn.cpp  SAIEndTurn.h  SEndGameNotify.h  SNextTurnNotify.cpp  SNextTurnNotify.h
lab6/Logic/Tests/: ITest.h  TTakeTest.cpp  TTakeTest.h
lab6/Other/: NNFileSystem.cpp  NNFileSystem.h  TPermutator.h  TThreadSafeQueue.h
lab6/Patterns/: TSingleton.h
lab6/States/: TBoardScreen.cpp  TBoardScreen.h  TSettings.cpp  TSettings.h
lab6/VisualModels/: TAIBlock.cpp  TAnimationControl.cpp  TAnimationControl.h  TAutoAlignArea.cpp  TAutoAlignArea.h  TControl.h  TParent.cpp  TParent.h
lab6/VisualModels/Enums/: NNAlign.h  NNState.h
lab6secondTry/: .~lock.Untitled 2.odg#  CMakeLists.txt  Untitled 2.odg  main.cpp
lab6secondTry/Assets/: Over.xcf  cards.xcf
lab6secondTry/Assets/BoardScreen/: Normal.xcf
lab6secondTry/BoardScreen/: TAIPlayersPanel.cpp  TAIPlayersPanel.h  TCardsSelector.cpp  TCardsSelector.h  TPanel.cpp  TPanel.h  TVisualCard.cpp  TVisualCard.h
lab6secondTry/GameSingletons/: TGame.cpp  TGame.h  TGameStateMachine.cpp  TGameStateMachine.h  TInputHandler.cpp  TInputHandler.h  TLogic.cpp  TLogic.h  TTextureManager.cpp  TTextureManager.h
lab6secondTry/Logic/: NNCardType.h  NNCardValue.h  NNDifficulty.h  TCard.cpp  TCard.h  TPlayer.cpp  TPlayer.h  TSession.cpp  TSession.h
lab6secondTry/Models/: TGameState.h  TVisualObject.cpp  TVisualObject.h
lab6secondTry/Other/: NNFileSystem.cpp  NNFileSystem.h  TTimer.cpp  TTimer.h
lab6secondTry/States/: NNFileSystem.cpp  NNFileSystem.h  TBoardScreen.cpp  TBoardScreen.h  TMainMenu.cpp  TMainMenu.h  TSettings.cpp  TSettings.h
lab6secondTry/VisualModels/: IControl.h  IVisual.h  TAIBlock.cpp  TAIBlock.h  TAnimationControl.cpp  TAnimationControl.h  TAutoAlignArea.cpp  TAutoAlignArea.h  TControl.cpp  TControl.h  TParent.cpp  TParent.h  TVisualCard.cpp  TVisualCard.h  TVisualObject.cpp  TVisualObject.h  TVisualParent.cpp  TVisualParent.h
lab6secondTry/VisualModels/Enums/: NNAlign.h
labx/Project1/Project1/: Project1.cpp
mkr1/: mkr.odt
mkr2/: 5.1.xcf  5.2.xcf  6.1.xcf  Untitled 1.odt  Сідак_ДРК_2.docx  хуета.xlsx
mkr2/6/6.1/: 6.1.xcf
mkr2/6/6.2/: 6.2.xcf
mkr2/7/1/: 7.xcf
mkr2/7/2/: 7.xcf
mkr2/8/: assignment.xcf
untitled1/: IGameState.h  TButton.cpp  TButton.h  TGame.cpp  TGame.h  TGameStateMachine.cpp  TGameStateMachine.h
untitled1/Models/: TGameObject.cpp  TGameObject.h
untitled1/Patterns/: TSingleton.h
untitled1/States/: TMainMenu.cpp  TMainMenu.h
